jilles      2006/09/29 22:50:24 UTC	(20060929-6569)
  Log:
  Call some function pointers accessed via the sourceinfo_t
  for command_fail/command_success_nodata/command_success_string
  on sources without a user_t (non-IRC).
  

  Changes:	Modified:
  +20 -0	trunk/include/common.h (File Modified) 
  +0 -20	trunk/include/services.h (File Modified) 
  +10 -0	trunk/include/sourceinfo.h (File Modified) 
  +24 -1	trunk/src/services.c (File Modified) 


jilles      2006/09/29 22:47:23 UTC	(20060929-6567)
  Log:
  logcommand(): allow commands with user_t and connection_t both NULL
  

  Changes:	Modified:
  +3 -2		trunk/src/function.c (File Modified) 


jilles      2006/09/29 22:34:35 UTC	(20060929-6565)
  Log:
  CatServ: Use command_success_nodata().
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ircd_catserv.c (File Modified) 


jilles      2006/09/29 21:54:21 UTC	(20060929-6563)
  Log:
  Fix tcnt stuff, still ugly though.
  

  Changes:	Modified:
  +1 -2		trunk/modules/xmlrpc/account.c (File Modified) 


jilles      2006/09/29 21:20:37 UTC	(20060929-6561)
  Log:
  Update catserv to new add_service().
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ircd_catserv.c (File Modified) 


jilles      2006/09/29 21:15:10 UTC	(20060929-6559)
  Log:
  Add list_t *cmdtree member/parameter to service_t/add_service().
  This will allow RPC modules to find services commands.
  

  Changes:	Modified:
  +4 -1		trunk/include/servtree.h (File Modified) 
  +3 -2		trunk/modules/chanserv/main.c (File Modified) 
  +4 -2		trunk/modules/global/main.c (File Modified) 
  +3 -2		trunk/modules/memoserv/main.c (File Modified) 
  +3 -2		trunk/modules/nickserv/main.c (File Modified) 
  +3 -2		trunk/modules/operserv/main.c (File Modified) 
  +2 -2		trunk/modules/saslserv/main.c (File Modified) 
  +3 -1		trunk/src/servtree.c (File Modified) 


jilles      2006/09/29 20:51:14 UTC	(20060929-6557)
  Log:
  Update depend files.
  

  Changes:	Modified:
  +23 -1	trunk/backend/.depend (File Modified) 